[package]
name = "syncme"
version = "0.1.0"
edition = "2021"
description = "Lazy syncing utility"
repository = "https://github.com/mrtnvgr/syncme"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.3"
path-absolutize = { version = "3", features = ["once_cell_cache"] }
